<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mujoco_ros2_bridge</name>
  <version>0.1.0</version>
  <description>MuJoCo + MoveIt FollowJointTrajectory bridge</description>

  <maintainer email="joelviju2002@gmail.com">Joel Viju</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Actions / Messages -->
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>


  <!-- MoveIt -->
  <depend>moveit_ros_planning_interface</depend>

  <!-- Testing (optional but standard) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
